# local-toastd

./: .gitignore  README.md  pyproject.toml  settings.toml
.github/workflows/: release.yml
scripts/: build.ps1  release.ps1
src/: run_local_toastd.py
src/local_toastd/: __init__.py  app.py  http_server.py  icons.py  instance_guard.py  main.py  models.py  notification_types.py  notification_ui.py  queue_manager.py  settings.py  settings_window.py  sound.py
tests/: test_app.py  test_http_server.py  test_icons.py  test_instance_guard.py  test_models.py  test_notification_manager.py  test_notification_ui.py  test_settings.py  test_settings_window.py  test_sound.py
