[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local-toastd"
version = "0.1.0"
description = "Local HTTP to toast notification daemon powered by PySide6 and Flask."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "Flask>=3.1.0",
  "PySide6>=6.10.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.18.0",
  "pytest>=8.0.0",
  "ruff>=0.13.0",
]

[project.scripts]
local-toastd = "local_toastd.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
files = ["src", "tests"]
warn_unused_ignores = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["PySide6.*"]
ignore_missing_imports = true
